--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start":"vite",
-
-
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -14,7 +12,14 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.1.0",
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/react": "^4.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-simple-typewriter": "^5.0.1"
