--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,3 @@
-MONGO ="mongodb+srv://Kunal_Rathore:Kunal%4020@cluster0.6spjrhx.mongodb.net/PDM"
-JWT= JBFSJKEFNJK23INU78
+MONGO ="url"
 Port=3000
 EXPIRE_TOKEN=1*60*60*1000
