--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -21,6 +22,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "puppeteer": "^19.8.3"
+    "puppeteer": "^19.8.3",
+    "razorpay": "^2.9.1"
   }
 }
