--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,5 @@ MONGO ="mongodb+srv://Vidhi21:sumit28@cluster0.kkqnprz.mongodb.net/Employer"
 JWT= JBFSJKEFNJK23INU78
 Port=3000
 EXPIRE_TOKEN=1*60*60*1000
+KEY_ID = 'rzp_test_TMYm4H6wucmDs0'
+KEY_SECRET = 'MdqJC1jHEX5PgkhNKsIK2RBA'
