--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-otp-input": "^3.0.4",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.14.2",
     "react-simple-typewriter": "^5.0.1"
